[gd_scene load_steps=20 format=2]

[ext_resource path="res://Elementos/Fases/Hospital/HospitalFase3/LivroAzul.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Objetos/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elementos/Fases/Hospital/HospitalFase3/LivroVermelho.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Fontes/FonteComicSansMS.tscn" type="PackedScene" id=4]
[ext_resource path="res://Elementos/Textuais/ComicSansMS/comic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Elementos/Visuais/Fundo/Hosp.jpg" type="Texture" id=6]
[ext_resource path="res://Cenas/Objetos/Painel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Codigos/Cenas/TelaPrincipalHospitalNivel3.gd" type="Script" id=8]
[ext_resource path="res://Elementos/Sonoros/Notificar/Erro-2.wav" type="AudioStream" id=9]
[ext_resource path="res://Elementos/Visuais/Icones/Desinverter.png" type="Texture" id=10]
[ext_resource path="res://Elementos/Sonoros/Clicar/Peca.wav" type="AudioStream" id=11]
[ext_resource path="res://Elementos/Sonoros/Notificar/Acerto-1.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 149.05, 174.173 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 148.593, 167.299 )

[sub_resource type="Animation" id=7]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 22, 0 ), Vector2( -19, 0 ), Vector2( 17, 0 ), Vector2( -23, 0 ), Vector2( 21, 0 ), Vector2( 0, 0 ) ]
}

[node name="TelaHospitalFase3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="TextureRect" parent="."]
self_modulate = Color( 0.447059, 0.737255, 0.784314, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 143.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogo" parent="." instance=ExtResource( 2 )]

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoVoz/Vertical" index="1"]
custom_fonts/font = SubResource( 1 )

[node name="Caixa" parent="Dialogo/Margem/Vertical" index="1"]
margin_right = 1260.0

[node name="Texto" parent="Dialogo/Margem/Vertical/Caixa/Margem" index="0"]
margin_right = 1134.0
custom_fonts/normal_font = SubResource( 2 )

[node name="BotaoComando" parent="Dialogo/Margem/Vertical" index="2"]
visible = false
toggle_mode = true

[node name="Icone" parent="Dialogo/Margem/Vertical/BotaoComando/Vertical" index="0"]
self_modulate = Color( 1, 1, 1, 1 )
margin_top = 34.0
margin_right = 163.0
margin_bottom = 104.0
texture = ExtResource( 10 )
flip_h = false

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoComando/Vertical" index="1"]
margin_top = 109.0
margin_right = 163.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 3 )
text = "BotaoTras"

[node name="DisposicaoLateral" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.425
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -845.0
margin_top = -205.0
margin_right = 845.0
margin_bottom = 205.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 450
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToquesBons" type="TextureButton" parent="DisposicaoLateral"]
margin_left = 220.0
margin_right = 620.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="DisposicaoLateral/ToquesBons" instance=ExtResource( 4 )]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -11.5
margin_right = 43.0
margin_bottom = 11.5
custom_fonts/font = SubResource( 4 )
text = "ToquesBons"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="DisposicaoLateral/ToquesBons"]
position = Vector2( 180, 200 )

[node name="Contorno" type="CollisionShape2D" parent="DisposicaoLateral/ToquesBons/Area"]
shape = SubResource( 5 )

[node name="ToquesRuins" type="TextureButton" parent="DisposicaoLateral"]
margin_left = 1070.0
margin_right = 1470.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="DisposicaoLateral/ToquesRuins" instance=ExtResource( 4 )]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -27.0
margin_right = 110.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 4 )
text = "ToquesRuins"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="DisposicaoLateral/ToquesRuins"]
position = Vector2( 180, 200 )

[node name="Contorno" type="CollisionShape2D" parent="DisposicaoLateral/ToquesRuins/Area"]
shape = SubResource( 5 )

[node name="ZonaNascimento" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Toque" type="TextureRect" parent="ZonaNascimento"]
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 200, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
stretch_mode = 6
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Contorno" type="ReferenceRect" parent="ZonaNascimento/Toque"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0.0784314, 0.392157, 1 )
border_width = 10.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="AudioStreamPlayer" parent="ZonaNascimento/Toque"]
stream = ExtResource( 11 )

[node name="Area" type="Area2D" parent="ZonaNascimento/Toque"]

[node name="Contato" type="CollisionShape2D" parent="ZonaNascimento/Toque/Area"]
position = Vector2( 200, 200 )
shape = SubResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Animar" type="AnimationPlayer" parent="Camera"]
anims/TemerCamera = SubResource( 7 )

[node name="Painel" parent="." instance=ExtResource( 7 )]

[node name="AudioAcerto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="AudioErro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="toggled" from="Dialogo/Margem/Vertical/BotaoComando" to="." method="_viraDesvira"]
[connection signal="gui_input" from="ZonaNascimento/Toque/Contorno" to="." method="_arrastarImagem"]
[connection signal="area_entered" from="ZonaNascimento/Toque/Area" to="." method="_AreaEntrou"]
[connection signal="area_exited" from="ZonaNascimento/Toque/Area" to="." method="_AreaSaiu"]

[editable path="Dialogo"]
[editable path="Dialogo/Margem/Vertical/BotaoVoz"]
[editable path="Dialogo/Margem/Vertical/BotaoComando"]
